handle alt states #2

--- a/services/client/submission-dev/index.html
+++ b/services/client/submission-dev/index.html
@@ -36,7 +36,7 @@
 
             <!-- THIS IS WHAT SHOULD BE INSERTED INTO A PAGE FOR EMBEDDING -->
             <script src="http://localhost:3000/js/dev/open-access-fund.js"></script>
-            <oaf-submission-form></oaf-submission-form>
+            <oaf-submission-form><div>A custom submission confirmation message!</div></oaf-submission-form>
             <!-- END INSERTION POINT -->
 
           </div>
