--- a/services/client/dev/public/logged-out.html
+++ b/services/client/dev/public/logged-out.html
@@ -1,15 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>{{title}}</title>
-    <link rel="icon" href="/img/site-icon.png">
+    <title>Logout</title>
+    <link rel="icon" href="img/site-icon.png">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
-    {{config}}
-    {{bundle}}
+    <meta name="robots" content="noindex, nofollow">
   </head>
 
   <body>
-    {{loaderHtml}}
-    <oaf-admin-app></oaf-admin-app>
+    <h1>You have been logged out.</h1>
   </body>
 </html>
