--- a/services/client/html/index.html
+++ b/services/client/html/index.html
@@ -10,6 +10,6 @@
 
   <body>
     {{loaderHtml}}
-    <oaf-admin-app></oaf-admin-app>
+    <oaf-admin-app style="display: none;"></oaf-admin-app>
   </body>
 </html>
