--- a/services/client/html/index.html
+++ b/services/client/html/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/img/site-icon.png">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
     {{config}}
+    {{preloadedIcons}}
     {{bundle}}
   </head>
 
